changes to refactor code and fix some alignment issues with forecast cards

--- a/sass/components/_current.scss
+++ b/sass/components/_current.scss
@@ -107,4 +107,8 @@
     text-align: left;
     text-shadow: 3px 3px 5px rgba($color-black, 0.4);
   }
+
+  &__color {
+    color: #fff;
+  }
 }
